--- a/book/eigenvalues.ipynb
+++ b/book/eigenvalues.ipynb
@@ -19,15 +19,15 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Módulo para resolver ecuaciones diferenciales ordinarias\n",
-    "from scipy.integrate import odeint\n",
+    "import numpy as np\n",
     "\n",
     "# Importar la biblioteca de álgebra lineal de SciPy\n",
-    "from scipy import linalg as la"
+    "from scipy import linalg as la\n",
+    "\n",
+    "# Módulo para resolver ecuaciones diferenciales ordinarias\n",
+    "from scipy.integrate import odeint"
    ]
   },
   {
@@ -887,6 +887,8 @@
    "outputs": [],
    "source": [
     "# Sistema de ecuaciones de Kepler\n",
+    "\n",
+    "\n",
     "def KeplerSystem(state, t):\n",
     "    y1, y2, y3, y4 = state\n",
     "    d_y3 = -1 * y1 / np.power(y1**2.0 + y2**2.0, 3.0 / 2.0)\n",
@@ -3742,6 +3744,8 @@
    ],
    "source": [
     "# Sistema de ecuaciones diferenciales ordinarias\n",
+    "\n",
+    "\n",
     "def system_ode(y, t, alpha, beta, gamma):\n",
     "    dA = alpha * y[0] - beta * y[1]\n",
     "    dD = gamma * y[1]\n",
