--- a/book/heat.ipynb
+++ b/book/heat.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ecuación de calor\n",
+    " \n",
+    "$$\n",
+    "\\frac{\\mathrm{d}u}{\\mathrm{d}t}-D\\Delta u=\n",
+    "0.\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -14,18 +26,6 @@
     "from ipywidgets import Video\n",
     "from scipy.sparse import spdiags\n",
     "from scipy.sparse.linalg import spsolve"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ecuación de calor\n",
-    " \n",
-    "$$\n",
-    "\\frac{\\mathrm{d}u}{\\mathrm{d}t}-D\\Delta u=\n",
-    "0.\n",
-    "$$"
    ]
   },
   {
@@ -227,9 +227,7 @@
     "    ax.set_ylim(y.min() - 10 * dy, y.max() + 10 * dy)\n",
     "\n",
     "    if save:\n",
-    "        fig.savefig(\n",
-    "            fname, bbox_inches=\"tight\", dpi=300, transparent=True\n",
-    "        )"
+    "        fig.savefig(fname, bbox_inches=\"tight\", dpi=300, transparent=True)"
    ]
   },
   {
@@ -396,7 +394,7 @@
    "outputs": [],
    "source": [
     "# Definimos la cantidad de pasos temporales\n",
-    "T = 100 # 1000\n",
+    "T = 100  # 1000\n",
     "\n",
     "# Cada cuanto imprimiremos el porcentaje de avance\n",
     "ndebug = T // 10\n",
