--- a/book/linear_algebra.ipynb
+++ b/book/linear_algebra.ipynb
@@ -19,15 +19,15 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Módulo para resolver ecuaciones diferenciales ordinarias\n",
-    "from scipy.integrate import odeint\n",
+    "import numpy as np\n",
     "\n",
     "# Importar la biblioteca de álgebra lineal de SciPy\n",
-    "from scipy import linalg as la"
+    "from scipy import linalg as la\n",
+    "\n",
+    "# Módulo para resolver ecuaciones diferenciales ordinarias\n",
+    "from scipy.integrate import odeint"
    ]
   },
   {
