--- a/book/lorenz.ipynb
+++ b/book/lorenz.ipynb
@@ -6,7 +6,82 @@
     "id": "yNiZdukgsMMw"
    },
    "source": [
-    "# Sistema de Lorenz"
+    "# Sistema de Lorenz\n",
+    "\n",
+    "El atractor de Lorenz es un sistema tridimensional determinista de comportamiento caótico.\n",
+    "Esto es, dados los mismos parámetros iniciales, y en el mismo instante de tiempo, obtendremos\n",
+    "los mismos resultados, más sin embargo, será extremadamente sensitivo a estos, dando el sello\n",
+    "característico de la <a href=\"https://es.wikipedia.org/wiki/Teor%C3%ADa_del_caos\" target=\"_blank\">Teoría del caos</a>.\n",
+    "\n",
+    "## Pequeña historia\n",
+    "\n",
+    "Entre los **sistemas caóticos** conocidos resalta la atmósfera terrestre, la cual Lorenz como meteorólogo estudiaba.\n",
+    "\n",
+    "Trabajando en un sistema de 12 variables, quiso replicar uno de sus cálculos anteriores.\n",
+    "Dejó la computadora haciendo el trabajo, fue por un café, y cuando regresó, a pesar de haber\n",
+    "partido de los mismos parámetros iniciales, obtuvo un resultado absurdamente distinto.\n",
+    "¿Qué había pasado?\n",
+    "\n",
+    "La computadora que Lorenz había usado no estaba averiada, los números que introdujo habían sido\n",
+    "redondeados por milésimas.\n",
+    "Los cálculos eran correctos, y sin embargo los resultados arrojaban condiciones climáticas totalmente\n",
+    "separadas, es así como Lorenz descubre el caos.\n",
+    "\n",
+    "Simplificando la ecuación para facilitar su estudio, formuló el siguiente sistema:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\mathrm{d}x}{\\mathrm{d}t} &= \\sigma\\left(y-x\\right) \\\\\n",
+    "\\frac{\\mathrm{d}y}{\\mathrm{d}t} &= x\\left(\\rho - z\\right)-y \\\\\n",
+    "\\frac{\\mathrm{d}z}{\\mathrm{d}t} &= xy-\\beta z\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Donde $\\sigma$, $\\rho$ y $\\beta$ son constantes físicas atmosféricas.\n",
+    "\n",
+    "\n",
+    "- Un sistema de 3 dimensiones que cambia dinámicamente con respecto al tiempo.\n",
+    "- Es impredecible, pues no responde a ninguna ley.\n",
+    "- Pero a la vez es determinista, pues dadas unas condiciones iniciales, podemos conocer su evolución exacta en el futuro.\n",
+    "- Es caótico.\n",
+    "- Sistema que luego se presentó junto al nombre del \"Efecto mariposa\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "JvK13V4rd5Ah"
+   },
+   "source": [
+    "## Implementación en Python\n",
+    "\n",
+    "Python nos proporciona librerías fascinantes como `numpy` y `matplotlib` para trabajar con\n",
+    "matrices y visualización de datos.\n",
+    "Si conocemos el fenómeno numéricamente, podremos representarlo.\n",
+    "Para ello, trabajaremos con la misma ecuación definida por Lorenz en 1963, calcularemos\n",
+    "todos sus puntos para un intervalo de tiempo definido, y los llevaremos a una gráfica\n",
+    "tridimensional, donde está la belleza de estas ecuaciones.\n",
+    "\n",
+    "## Tareas propuestas\n",
+    "\n",
+    "A continuación, las resoluciones de las 5 tareas propuestas para el proyecto final.\n",
+    "\n",
+    "### Tarea 1\n",
+    "\n",
+    "Implemente la función representativa del sistema en lenguaje Python.\n",
+    "Tenga en cuenta que la variable de estado sería un `ndArray` de 3 dimensiones.\n",
+    "Por otra parte, la función recibe los parámetros de entrada $\\sigma$, $\\rho$ y $\\beta$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Pc1EtF89Ibyd"
+   },
+   "source": [
+    "Definimos la función `solve_lorenz` en un estado cualquiera `(x, y, z)` con parámetros físicos definidos.\n",
+    "\n",
+    "Nótese que en los argumentos está presente un instante `t`, este nos servirá para implementar la función directamente en la Tarea 2."
    ]
   },
   {
@@ -20,106 +95,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from scipy.integrate import odeint"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "aTfCNzDEd4bD"
-   },
-   "source": [
-    "El atractor de Lorenz es un sistema tridimensional determinista de comportamiento caótico.\n",
-    "\n",
-    "Esto es, dados los mismos parámetros iniciales, y en el mismo instante de tiempo, obtendremos los mismos resultados, mas sin embargo, será extremadamente sensitivo a estos, dando el sello característico de la <a href=\"https://es.wikipedia.org/wiki/Teor%C3%ADa_del_caos\" target=\"_blank\">Teoría del caos</a>."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "RJKfaHinh9ze"
-   },
-   "source": [
-    "### Pequeña historia\n",
-    "Entre los **sistemas caóticos** conocidos resalta la atmósfera terrestre, la cual Lorenz como meteorólogo estudiaba.\n",
-    "\n",
-    "Trabajando en un sistema de 12 variables, quiso replicar uno de sus cálculos anteriores. Dejó la computadora haciendo el trabajo, fue por un café, y cuando regresó, a pesar de haber partido de los mismos parámetros iniciales, obtuvo un resultado absurdamente distinto. ¿Qué había pasado?\n",
-    "\n",
-    "La computadora que Lorenz había usado no estaba averiada, los números que introdujo habían sido redondeados por milésimas. Los cálculos eran correctos, y sin embargo los resultados arrojaban condiciones climáticas totalmente separadas, es así como Lorenz descubre el caos.\n",
-    "\n",
-    "Simplificando la ecuación para facilitar su estudio, formuló el siguiente sistema:\n",
-    "\n",
-    "\\begin{align}\n",
-    "\\frac{dx}{dt} &= \\sigma(y - x) \\\\\n",
-    "\\frac{dy}{dt} &= x(\\rho - z) - y \\\\\n",
-    "\\frac{dz}{dt} &= xy - \\beta z\n",
-    "\\end{align}\n",
-    "\n",
-    "Donde $σ$, $ρ$ y $β$ son constantes físicas atmosféricas."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "jKbjYLI2x1Ds"
-   },
-   "source": [
-    "\n",
-    "Un sistema de 3 dimensiones que cambia dinámicamente con respecto al tiempo.\n",
-    "\n",
-    "Es impredecible, pues no responde a ninguna ley.\n",
-    "\n",
-    "Pero a la vez es determinista, pues dadas unas condiciones iniciales, podemos conocer su evolución exacta en el futuro.\n",
-    "\n",
-    "Es caótico.\n",
-    "\n",
-    "Sistema que luego se presentó junto al nombre del \"Efecto mariposa\"."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "JvK13V4rd5Ah"
-   },
-   "source": [
-    "## Implementación en Python\n",
-    "Python nos proporciona librerías fascinantes como `numpy` y `matplotlib` para trabajar con matrices y visualización de datos.\n",
-    "\n",
-    "Si conocemos el fenómeno numéricamente, podremos representarlo.\n",
-    "\n",
-    "Para ello, trabajaremos con la misma ecuación definida por Lorenz en 1963, calcularemos todos sus puntos para un intervalo de tiempo definido, y los llevaremos a una gráfica tridimensional, donde está la belleza de estas ecuaciones."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "hOPkzu3KKUpJ"
-   },
-   "source": [
-    "## Tareas propuestas\n",
-    "A continuación, las resoluciones de las 5 tareas propuestas para el proyecto final."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "b6TV_fcbE4xY"
-   },
-   "source": [
-    "### Tarea 1\n",
-    "> «*Implemente la función representativa del sistema en lenguaje Python.\n",
-    "Tenga en cuenta que la variable de estado sería un ndArray de 3 dimensiones. Por otra parte, la función recibe los parámetros de entrada\n",
-    "σ , ρ y β*».\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Pc1EtF89Ibyd"
-   },
-   "source": [
-    "Definimos la función `solve_lorenz` en un estado cualquiera `(x, y, z)` con parámetros físicos definidos.\n",
-    "\n",
-    "Nótese que en los argumentos está presente un instante `t`, este nos servirá para implementar la función directamente en la Tarea 2."
    ]
   },
   {
@@ -165,16 +140,12 @@
    },
    "source": [
     "### Tarea 2\n",
-    "> «*Escriba el código correspondiente a la simulación de este sistema para un intervalo de tiempo $t ∈ [0, 100]$ que contenga 3000 valores equidistantes. Además utilice los parámetros $σ = 10$, $ρ = 28$, $β = 8/3$ y el vector de condiciones iniciales $(1, 1, 1)$. Emplee para ello la función\n",
-    "`odeint`*»."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "KX9g7bknyXUM"
-   },
-   "source": [
+    "\n",
+    "Escriba el código correspondiente a la simulación de este sistema para un intervalo de tiempo\n",
+    "$t\\in\\left[0,100\\right]$ que contenga $3000$ valores equidistantes.\n",
+    "Además use los parámetros $\\sigma=10$, $\\rho=28$, $\\beta = 8/3$ y el vector de condiciones iniciales\n",
+    "$\\left(1, 1, 1\\right)$. Emplee para ello la función `odeint`.\n",
+    "\n",
     "Para esto, definiremos un estado de coordenadas iniciales `initial_state` y con ayuda de la función `numpy.linspace` crearemos intervalos de tiempo espaciados uniformemente."
    ]
   },
@@ -278,12 +249,8 @@
    },
    "source": [
     "### Tarea 3\n",
-    "> «*Cree una gráfica en 3 dimensiones que utilice la paleta de colores llamada `plt.cm.plasma` para representar la solución la cual deberá de tener una forma similar a la Figura 1*».\n",
     "\n",
-    "<figure align=\"center\">\n",
-    "<img src=\"https://raw.githubusercontent.com/leflores-fisi/lorenz-attractor/ef0f459574d3142709b7053c9d3f8e1a28dc9d30/imgs/pec3_figure1.png\" align=\"center\" width=\"300\"/>\n",
-    "<figcaption align=\"center\"><i>Figura 1</i></figcaption>\n",
-    "</figure>"
+    "Cree una gráfica en 3 dimensiones que utilice la paleta de colores llamada `plt.cm.plasma` para representar la solución la cual deberá de tener una forma similar a la Figura 1."
    ]
   },
   {
@@ -411,16 +378,11 @@
    },
    "source": [
     "### Tarea 4\n",
-    "> «*Solucione el mismo problema con los mismos parámetros a excepción de $ρ$ el cual tomará los valores $−42$, $15$, $28$ y $100$. Almacene las respuestas en dos listas, una para el parámetro $ρ$ y la otra para la solución correspondiente.*»."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "S3Zqj7oAA5uT"
-   },
-   "source": [
-    "Entonces, almacenamos los 4 valores para la constante $ρ$ en `rho_values` y ejecutamos nuestro `lorenz_attractor` para cada valor de $ρ$, con todo lo demás constante, obteniendo así los resultado esperados."
+    "\n",
+    "Solucione el mismo problema con los mismos parámetros a excepción de $\\rho$ el cual tomará los valores $−42$, $15$, $28$ y $100$.\n",
+    "Almacene las respuestas en dos listas, una para el parámetro $\\rho$ y la otra para la solución correspondiente.\n",
+    "\n",
+    "Entonces, almacenamos los 4 valores para la constante $\\rho$ en `rho_values` y ejecutamos nuestro `lorenz_attractor` para cada valor de $\\rho$, con todo lo demás constante, obteniendo así los resultados esperados."
    ]
   },
   {
@@ -499,11 +461,12 @@
    },
    "source": [
     "### Tarea 5\n",
-    "> «*Cree gráficas de 3 dimensiones para representar cada solución, todas\n",
+    "\n",
+    "Cree gráficas de 3 dimensiones para representar cada solución, todas\n",
     "en la misma figura. Para ello cree una figura de 2 fila y 2 columnas.\n",
-    "Coloque en el texto del título de la gráfica el parámetro $ρ$ igualado a\n",
-    "el valor correspondiente en cada caso. Garantice que la figura tenga\n",
-    "un tamaño de $10 × 10$*»."
+    "Coloque en el texto del título de la gráfica el parámetro $\\rho$ igualado al\n",
+    "valor correspondiente en cada caso.\n",
+    "Garantice que la figura tenga un tamaño de $10\\times 10$."
    ]
   },
   {
