--- a/book/numpy_b.ipynb
+++ b/book/numpy_b.ipynb
@@ -28,7 +28,7 @@
     "id": "MHZik24Su0P4"
    },
    "source": [
-    "### Generando Matrices\n",
+    "## Generando Matrices\n",
     "\n",
     "Las matrices en Python numéro pueden ser representadas de varias formas. Una de ellas es mediante el uso de vectores 2-dimensionales o 2darray. Más adelante se mostrará otra estructura de dato para representarlas. Seguidamente se brindan algunos ejemplos de cómo generar matrices con vectores bidimensionales.\n",
     "\n",
@@ -1709,14 +1709,15 @@
    },
    "outputs": [],
    "source": [
+    "import matplotlib.cm as cm\n",
+    "\n",
     "# Módulos para representación gráfica en 3D\n",
     "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import matplotlib.cm as cm\n",
     "\n",
     "# Módulo para análisis simbólico\n",
     "# (En este código se utiliza para representar las matrices)\n",
     "import sympy as sy\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
     "# Módulo de scipy que permite trabajo con matrices sparse\n",
     "from scipy.sparse import spdiags"
@@ -2482,11 +2483,11 @@
    },
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "# Ploteo de soluciones\n",
     "from matplotlib import cm\n",
-    "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
     "# Matrices sparse\n",
