--- a/book/python.ipynb
+++ b/book/python.ipynb
@@ -1183,7 +1183,7 @@
     "m = lambda x, y: math.sqrt(x**2 + y**2)\n",
     "\n",
     "# Display latex inline\n",
-    "from IPython.display import display, Latex\n",
+    "from IPython.display import Latex, display\n",
     "\n",
     "display(Latex(\"\\sqrt{x^2 + y^2} = %d\" % (m(2, 3),)))"
    ]
