--- a/book/eigenvalues.ipynb
+++ b/book/eigenvalues.ipynb
@@ -20,8 +20,14 @@
    "outputs": [],
    "source": [
     "import matplotlib\n",
+    "import matplotlib.animation as animation\n",
+    "\n",
+    "# Se utiliza para dibujar figuras geometricas y paths\n",
+    "import matplotlib.patches as patches\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "from covid19dh import covid19\n",
+    "from pylab import *\n",
     "\n",
     "# Importar la biblioteca de álgebra lineal de SciPy\n",
     "from scipy import linalg as la\n",
@@ -226,17 +232,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "id": "fpvASes2we9d"
-   },
-   "outputs": [],
-   "source": [
-    "from scipy.integrate import odeint"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "UbiC9KfRxGvG"
@@ -287,17 +282,6 @@
     "### Importación de los datos\n",
     "\n",
     "Primero importamos el módulo de python `covid19dh`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "id": "435SLRQKFu8f"
-   },
-   "outputs": [],
-   "source": [
-    "from covid19dh import covid19"
    ]
   },
   {
@@ -872,9 +856,6 @@
    },
    "outputs": [],
    "source": [
-    "import matplotlib.animation as animation\n",
-    "from pylab import *\n",
-    "\n",
     "# %matplotlib widget"
    ]
   },
@@ -3771,7 +3752,7 @@
     "plt.semilogy(t, sol[:, 1], \"-g\", label=\"Delfines\")\n",
     "plt.grid()\n",
     "plt.xlabel(\"tiempo [días]\", fontsize=18)\n",
-    "plt.ylabel(\"Población [$\\log_{10}(u)$]\", fontsize=18)\n",
+    "plt.ylabel(r\"Población [$\\log_{10}(u)$]\", fontsize=18)\n",
     "plt.title(\"Soluciones para el sistema Presa-Depredador\", fontsize=18)\n",
     "plt.legend(fontsize=18)\n",
     "plt.show()\n",
@@ -3854,9 +3835,6 @@
     }
    ],
    "source": [
-    "# Se utiliza para dibujar figuras geometricas y paths\n",
-    "import matplotlib.patches as patches\n",
-    "\n",
     "# Cantidades de las dos poblaciones a=atunes, d=delfines\n",
     "a = np.arange(0, 16, 1)\n",
     "d = np.arange(0, 16, 1)\n",
