--- a/book/linear_algebra.ipynb
+++ b/book/linear_algebra.ipynb
@@ -22,12 +22,14 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import sympy\n",
     "\n",
     "# Importar la biblioteca de álgebra lineal de SciPy\n",
     "from scipy import linalg as la\n",
     "\n",
     "# Módulo para resolver ecuaciones diferenciales ordinarias\n",
-    "from scipy.integrate import odeint"
+    "from scipy.integrate import odeint\n",
+    "from scipy.sparse import linalg as splin"
    ]
   },
   {
@@ -1122,8 +1124,6 @@
    },
    "outputs": [],
    "source": [
-    "import sympy\n",
-    "\n",
     "sympy.init_printing()  # Para imprimir los resultados de forma más estética"
    ]
   },
@@ -2406,17 +2406,6 @@
    },
    "source": [
     "#### Métodos iterativos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "id": "5LYXhelrQPHi"
-   },
-   "outputs": [],
-   "source": [
-    "from scipy.sparse import linalg as splin"
    ]
   },
   {
