--- a/book/python.ipynb
+++ b/book/python.ipynb
@@ -176,6 +176,11 @@
     }
    ],
    "source": [
+    "import math\n",
+    "\n",
+    "# Display latex inline\n",
+    "from IPython.display import Latex, display\n",
+    "\n",
     "\"Hola!\""
    ]
   },
@@ -283,7 +288,7 @@
     }
    ],
    "source": [
-    "type(2)"
+    "int"
    ]
   },
   {
@@ -309,7 +314,7 @@
     }
    ],
    "source": [
-    "type(12.45)"
+    "float"
    ]
   },
   {
@@ -333,8 +338,8 @@
     }
    ],
    "source": [
-    "print(\"Entero\", 2, type(2))\n",
-    "print(\"Flotante\", 1e-45, type(1e-45))"
+    "print(\"Entero\", 2, int)\n",
+    "print(\"Flotante\", 1e-45, float)"
    ]
   },
   {
@@ -424,7 +429,7 @@
     }
    ],
    "source": [
-    "print(False, type(False))"
+    "print(False, bool)"
    ]
   },
   {
@@ -1178,14 +1183,10 @@
     }
    ],
    "source": [
-    "import math\n",
-    "\n",
     "m = lambda x, y: math.sqrt(x**2 + y**2)\n",
     "\n",
-    "# Display latex inline\n",
-    "from IPython.display import Latex, display\n",
     "\n",
-    "display(Latex(\"\\sqrt{x^2 + y^2} = %d\" % (m(2, 3),)))"
+    "display(Latex(r\"\\sqrt{x^2 + y^2} = %d\" % (m(2, 3),)))"
    ]
   },
   {
@@ -3479,9 +3480,6 @@
     }
    ],
    "source": [
-    "import math\n",
-    "\n",
-    "\n",
     "def EsPrimo(b):\n",
     "    if b == 1:\n",
     "        return False\n",
@@ -3494,7 +3492,7 @@
     "\n",
     "\n",
     "for b in range(1, 30):\n",
-    "    print(\"Es primo {0}?\".format(b), EsPrimo(b))"
+    "    print(f\"Es primo {b}?\", EsPrimo(b))"
    ]
   },
   {
