--- a/book/eigenvalues.ipynb
+++ b/book/eigenvalues.ipynb
@@ -6,7 +6,7 @@
     "id": "1NxK5ecY-oJt"
    },
    "source": [
-    "# Clase#5 - Ecuaciones Diferenciales Ordinarias\n",
+    "# Ecuaciones Diferenciales Ordinarias\n",
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/5/5b/Lorenz_attractor_yb.svg\" height=400/>"
    ]
