--- a/book/numpy_b.ipynb
+++ b/book/numpy_b.ipynb
@@ -1575,7 +1575,7 @@
     "id": "QSOgaYjdCwhP"
    },
    "source": [
-    "# Ejemplo #1: Infiltración de Agua en el suelo.\n",
+    "## Ejemplo #1: Infiltración de Agua en el suelo.\n",
     "\n",
     "<img src=\"https://www.frontiersin.org/files/Articles/1258148/fmicb-14-1258148-HTML-r1/image_m/fmicb-14-1258148-g001.jpg\" width=350 heigth=150>\n",
     "\n",
