--- a/book/heat.ipynb
+++ b/book/heat.ipynb
@@ -394,7 +394,7 @@
    "outputs": [],
    "source": [
     "# Definimos la cantidad de pasos temporales\n",
-    "T = 200  # 1000\n",
+    "T = 1000\n",
     "\n",
     "# Cada cuanto imprimiremos el porcentaje de avance\n",
     "ndebug = T // 10\n",
@@ -536,6 +536,13 @@
    "outputs": [],
    "source": [
     "!(cat step_*.png | ffmpeg -f image2pipe -r 25 -i - -c:v libx265 video.mp4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<video controls src=\"video.mp4\">animation</video>"
    ]
   }
  ],
