--- a/book/heat.ipynb
+++ b/book/heat.ipynb
@@ -535,14 +535,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!(cat step_*.png | ffmpeg -f image2pipe -r 25 -i - -c:v libx265 video.mp4)"
+    "!(cat step_*.png | ffmpeg -f image2pipe -r 25 -i - -c:v libx265 video/heat.mp4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!(ls -l video)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<video controls src=\"video.mp4\">animation</video>"
+    "<video controls src=\"video/heat.mp4\">animation</video>"
    ]
   }
  ],
