--- a/book/heat.ipynb
+++ b/book/heat.ipynb
@@ -542,7 +542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<video controls src=\"video/heat.mp4\">animation</video>"
+    "<video controls src=\"heat.mp4\">animation</video>"
    ]
   }
  ],
