--- a/book/heat.ipynb
+++ b/book/heat.ipynb
@@ -539,10 +539,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "<video controls src=\"heat.mp4\">animation</video>"
+    "from IPython.display import YouTubeVideo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "YouTubeVideo(\"TmrRB8ZKTG4\")"
    ]
   }
  ],
