--- a/book/heat.ipynb
+++ b/book/heat.ipynb
@@ -23,6 +23,7 @@
     "import numpy as np\n",
     "import sympy as sp\n",
     "import xarray as xr\n",
+    "from IPython.display import YouTubeVideo\n",
     "from ipywidgets import Video\n",
     "from scipy.sparse import spdiags\n",
     "from scipy.sparse.linalg import spsolve"
@@ -536,15 +537,6 @@
    "outputs": [],
    "source": [
     "!(cat step_*.png | ffmpeg -f image2pipe -r 25 -i - -c:v libx265 video/heat.mp4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import YouTubeVideo"
    ]
   },
   {
