--- a/book/numpy_b.ipynb
+++ b/book/numpy_b.ipynb
@@ -1627,7 +1627,7 @@
     "\n",
     "Se representa la discretización de los operadores diferenciales en el siguiente esquema en diferencias:\n",
     "\n",
-    "$\\frac{u^{n+1}_{jk} - u^{n}_{jk}}{\\Delta t} - \\frac{u^n_{j-1\\,k} - 2 u^n_{jk} + u^n_{j+1\\,k}}{\\Delta x^2} - \\frac{u^n_{j\\, k-1} - 2 u^n_{jk} + u^n_{j\\, k+1}}{\\Delta y^2} = 0$\n",
+    "$\\dfrac{u^{n+1}_{j\\,k} - u^{n}_{j\\,k}}{\\Delta t}-D\\dfrac{u^n_{j-1\\,k}-2 u^n_{j\\,k}+u^n_{j+1\\,k}}{\\Delta x^2} - D\\dfrac{u^n_{j\\,k-1} - 2 u^n_{j\\,k} + u^n_{j\\,k+1}}{\\Delta y^2} = 0$.\n",
     "\n",
     "Es importante destacar que este esquema explícito (uno de los más simples) para que brinde soluciones estables debe de cumplir la siguiente condición CFL (Courant-Friedrichs-Levy):\n",
     "\n",
