--- a/book/references.bib
+++ b/book/references.bib
@@ -76,7 +76,7 @@
   doi = {10.1145/103162.103163},
   journal = {ACM Comput. Surv.},
   month = {mar},
-  pages = {5–48},
+  pages = {5-48},
   numpages = {44},
   keywords = {paper},
 }
