--- a/book/references.bib
+++ b/book/references.bib
@@ -80,3 +80,13 @@
   numpages = {44},
   keywords = {paper},
 }
+
+@book{salgado_classical_2023,
+  author    = {Salgado, Abner J. and Wise, Steven M.},
+  isbn      = {978-1-108-94260-7},
+  month     = {jan},
+  publisher = {Cambridge University Press},
+  title     = {Classical {Numerical} {Analysis}: {A} {Comprehensive} {Course}},
+  year      = {2023},
+  keywords  = {book}
+}
