--- a/book/binario.ipynb
+++ b/book/binario.ipynb
@@ -5,7 +5,10 @@
    "id": "5e054190",
    "metadata": {},
    "source": [
-    "# [Tutorial binario](https://www.binario.org.es)"
+    "# [Tutorial binario](https://www.binario.org.es)\n",
+    "\n",
+    "- [What Every Programmer Should Know About Floating-Point Arithmetic](https://floating-point-gui.de)\n",
+    "- [Float Toy](https://evanw.github.io/float-toy)"
    ]
   },
   {
