--- a/book/references.bib
+++ b/book/references.bib
@@ -1,84 +1,18 @@
-@book{Burden2017,
-  title = {Análisis {N}umérico},
-  author = {Burden, Richard L. and Faires, J. Douglas and Burden, Annette M.},
-  edition = {10},
-  publisher = {Cengage Learning},
-  year = {2017},
-  url = {https://latam.cengage.com/libros/analisis-numerico-2},
-  keywords = {book},
-}
-
-@book{Kincaid1994,
-  title = {Análisis {N}umérico: las matemáticas del cálculo científico},
-  author = {Kincaid, David R. and Ward Cheney, E. and Martínez Enríquez, Rafael
-            and Torres Alcaraz, Carlos and Fetter, Hans L.},
-  edition = {1},
-  publisher = {Addison - Wesley Iberoamericana},
-  year = {1994},
-  keywords = {book},
-}
-
-@book{Isaacson1993,
-  title = {Analysis of {N}umerical {M}ethods},
-  author = {Isaacson, Eugene and Bishop Keller, Herbert},
-  edition = {1},
-  publisher = {Dover Publications, Inc.},
-  year = {1993},
-  keywords = {book},
-}
-
 @book{Quarteroni2007,
-  title = {Numerical Mathematics},
-  author = {Quarteroni, Alfio and Sacco, Riccardo and Saleri, Fausto},
-  year = {2007},
+  title     = {Numerical Mathematics},
+  author    = {Quarteroni, Alfio and Sacco, Riccardo and Saleri, Fausto},
+  year      = {2007},
   publisher = {Springer Berlin Heidelberg},
-  doi = {10.1007/b98885},
-  keywords = {book},
-}
-
-@book{Hämmerlin1991,
-  title = {Numerical Mathematics},
-  author = {Hämmerlin, Günther and Hoffman, Karl-Heinz},
-  year = {1991},
-  publisher = {Springer New York},
-  doi = {10.1007/978-1-4612-4442-4},
-  keywords = {book},
-}
-
-@book{Kress1998,
-  title = {Numerical Analysis},
-  author = {Kress, Rainer},
-  year = {1998},
-  publisher = {Springer New York},
-  doi = {10.1007/978-1-4612-0599-9_1},
-  keywords = {book},
+  doi       = {10.1007/b98885},
+  keywords  = {book}
 }
 
 @online{python,
-  Author = {Python Software Foundation},
-  Title = {Python 3.12.1 documentation},
-  URL = {https://docs.python.org/3/library/functions.html#int},
-  URLDATE = {2024-01-13},
-  keywords = {online},
-}
-
-@article{10.1145/103162.103163,
-  author = {Goldberg, David},
-  title = {What Every Computer Scientist Should Know about Floating-Point
-           Arithmetic},
-  year = {1991},
-  issue_date = {March 1991},
-  publisher = {Association for Computing Machinery},
-  address = {New York, NY, USA},
-  volume = {23},
-  number = {1},
-  issn = {0360-0300},
-  doi = {10.1145/103162.103163},
-  journal = {ACM Comput. Surv.},
-  month = {mar},
-  pages = {5-48},
-  numpages = {44},
-  keywords = {paper},
+  author   = {Python Software Foundation},
+  title    = {Python 3.12.2 documentation},
+  url      = {https://docs.python.org/3/library/functions.html#int},
+  urldate  = {2024-01-13},
+  keywords = {online}
 }
 
 @book{salgado_classical_2023,
@@ -89,4 +23,41 @@
   title     = {Classical {Numerical} {Analysis}: {A} {Comprehensive} {Course}},
   year      = {2023},
   keywords  = {book}
+}
+
+@book{golub2012matrix,
+  title     = {Matrix {C}omputations},
+  author    = {Golub, Gene H and Van Loan, Charles F},
+  edition   = {4},
+  year      = {2012},
+  publisher = {The Johns Hopkins University Press},
+  keywords  = {book}
+}
+
+@book{kong2020python,
+  title     = {Python Programming and Numerical Methods: A Guide for Engineers and Scientists},
+  author    = {Kong, Q. and Siauw, T. and Bayen, A.},
+  isbn      = {9780128195499},
+  url       = {https://www.sciencedirect.com/book/9780128195499/python-programming-and-numerical-methods},
+  year      = {2020},
+  publisher = {Elsevier Science},
+  keywords  = {book}
+}
+
+@book{Gezerlis_2020,
+  place     = {Cambridge},
+  title     = {Numerical Methods in Physics with Python},
+  publisher = {Cambridge University Press},
+  url       = {https://www.cambridge.org/core/books/numerical-methods-in-physics-with-python/563DF013576DCC535668A100B8F7D2F9},
+  author    = {Gezerlis, Alex},
+  year      = {2020},
+  keywords  = {book}
+}
+
+@online{Bergmann2024,
+  author   = {Ronny Bergmann},
+  title    = {TMA4125 - Matematikk 4N},
+  url      = {https://wiki.math.ntnu.no/tma4125/2024v/lecture_plan},
+  urldate  = {2024-01-13},
+  keywords = {online}
 }
